--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,11 @@
     </div>
     <div id='right-content'>
       <div id='tilesheet-container'>
+
         <div id='tilesheet-canvas-container'>
+          <div id='tilesheet-selection-container'>
+
+          </div>
           <canvas id='canvas--tilesheet'></canvas>
           <button class='button--active' id='button--load-tilesheet'>+</button>
         </div>
