Fixed jscolor ref

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <head>
   <link href='/client/css/style.css' type='text/css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <script src='./client/js/jscolor.js'></script>
+  <script src='./js/jscolor.js'></script>
 </head>
 <body>
   <div class='overlay' id='overlay'>
