--- a/client/index.html
+++ b/client/index.html
@@ -23,19 +23,26 @@
   <div id='content'>
     <div id='left-content'>
       <div class='button--toolbar-container'>
-        <button class='button--toolbar button--selected' id='button--paint'>Paint</button>
+        <button class='button--toolbar button--selected' id='button--paint'>
+          Paint
+        </button>
+        <div class='tooltip'>Fill a tile on the canvas with current tile selection</div>
       </div>
       <div class='button--toolbar-container'>
         <button class='button--toolbar button--active' id='button--erase'>Erase</button>
+        <div class='tooltip'>Erase a tile on the canvas</div>
       </div>
       <div class='button--toolbar-container'>
         <button class='button--toolbar button--active' id='button--fill'>Fill</button>
+        <div class='tooltip'>Flood fill tiles with current tile selection</div>
       </div>
       <div class='button--toolbar-container'>
         <button class='button--toolbar button--active' id='button--select'>Select</button>
+        <div class='tooltip'>Select a portion of the canvas to fill or erase</div>
       </div>
       <div class='button--toolbar-container'>
         <button class='button--toolbar button--active' id='button--clear'>Clear</button>
+        <div class='tooltip'>Clear the current active layer</div>
       </div>
     </div>
     <div id='center-content'>
