--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,34 @@
       </div>
     </div>
     <div id='center-content'>
+      <div id='canvas-menus-container'>
+        <div id='canvas-settings-menu'>
+          <div id='canvas-settings-options'>
+            <div class='settings-container' id='tile-settings'>
+              <h3>Tile Size</h3>
+              <div class='options'>
+                W: <input class='input--dim' value='32' min='8' max='512' type='number' id='tile-width'/><br />
+                H: <input class='input--dim' value='32' min='8' max='512' type='number' id='tile-height'/>
+              </div>
+            </div>
+            <div class='settings-container' id='canvas-settings'>
+              <h3>Canvas Size</h3>
+              <div class='options'>
+                Cols: <input class='input--dim' id='canvas-cols' value='40' min='1' max='100' type='number'/><br />
+                Rows: <input class='input--dim' id='canvas-rows' value='30' min='1' max='100' type='number'/>
+              </div>
+            </div>
+            <br />
+            <div class='settings-container' id='settings-grid'>
+              Show Grid <input type='checkbox' id='input--settings-grid' checked/>
+            </div>
+            <div class='settings-container' id='settings-color'>
+              BG Color <button class='jscolor {valueElement:null}' id='input--settings-color'></button>
+            </div>
+          </div>
+          <div id='canvas-settings-toggle'>></div>
+        </div>
+      </div>
       <canvas id='canvas--main'></canvas>
     </div>
     <div id='right-content'>
@@ -87,31 +115,6 @@
       <div id='layer-toolbar'>
         <button class='button--active button--layer' id='new-layer'>+</button>
         <button class='button--inactive button--layer' id='del-layer'>-</button>
-      </div>
-
-      <div id='settings'>
-        <div class='settings-container' id='tile-settings'>
-          <h3>Tile Size</h3>
-          <div class='options'>
-            W: <input class='input--dim' value='32' min='8' max='512' type='number' id='tile-width'/><br />
-            H: <input class='input--dim' value='32' min='8' max='512' type='number' id='tile-height'/>
-          </div>
-        </div>
-
-        <div class='settings-container' id='canvas-settings'>
-          <h3>Canvas Size</h3>
-          <div class='options'>
-            Cols: <input class='input--dim' id='canvas-cols' value='40' min='1' max='100' type='number'/><br />
-            Rows: <input class='input--dim' id='canvas-rows' value='30' min='1' max='100' type='number'/>
-          </div>
-        </div>
-        <br />
-        <div class='settings-container' id='settings-grid'>
-          Show Grid <input type='checkbox' id='input--settings-grid' checked/>
-        </div>
-        <div class='settings-container' id='settings-color'>
-          BG Color <button class='jscolor {valueElement:null}' id='input--settings-color'></button>
-        </div>
       </div>
     </div>
   </div>
